# resource-engineering

./: README.md
HtmlTableTransformer/: pyproject.toml  requirements.txt  setup.py
HtmlTableTransformer/src/HtmlTableTransformer/: __init__.py  parser.py  scraper.py
HtmlTableTransformer/tests/: table-dataframe-test.ipynb  test_parser.py
mdkengineering/: big-query-example.txt  filtered_content.txt  scrapy.cfg  start_job.sh  test_job.sh  test_xpath.py
mdkengineering/mdkengineering/: DebugAssistance.py  items.py  middlewares.py  pipelines.py  settings.py
mdkengineering/mdkengineering/spiders/: wikiDocSpider.py
mdkengineering/mdkengineering/utils/: DataTransformer.py  ElementDicts.py  Parse.py
mdkengineering/output/json/: Category-talk:Help__2018-03-22.json  Category:Help__2013-08-16.json  Category:Primary-care__2013-08-01.json  Category:Urology__2009-01-19.json  Circulatory-anastomosis__2012-09-04.json  Fossil__2012-09-04.json  Main-Page__2020-09-23.json  Open-angle-glaucoma__2018-03-04.json  Page-history__2013-09-02.json  Page-name__2013-09-02.json
medical-domain-knowledge-base/: scrapy.cfg
medical-domain-knowledge-base/medical-domain-knowledge-base/: items.py  middlewares.py  pipelines.py  settings.py
test-repo/: bs4-explore.ipynb  test-ElementDicts.ipynb  test-Parse.ipynb  test_ElementDicts.ipynb
test-repo/.ipynb_checkpoints/: bs4-explore-checkpoint.ipynb  test-ElementDicts-checkpoint.ipynb  test-Parse-checkpoint.ipynb  test_ElementDicts-checkpoint.ipynb
test-repo/.virtual_documents/: Untitled.ipynb  test_ElementDicts.ipynb
(+1 files in other folders)
